--- a/equ.config
+++ b/equ.config
@@ -1,3 +1,4 @@
 [{backend_servers, [{"127.0.0.1", 1235}, {"127.0.0.1", 1236}]},
  {port, 2307},
- {num_acceptors, 4}].
+ {num_acceptors, 4},
+ {proxy_timeout, 60000}].
